# rebpf

./: .gitattributes  .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix  module.nix  shell.nix
contrib/: rebpf-gui.desktop  rebpf.service  service.rebpf.conf  service.rebpf.policy
rebpf/: Cargo.toml  bindings.rs  bpf-arena.c  bpf-dfa.c  bpf-dns.c  bpf-dns.h  bpf-load.c  bpf-shared.h  bpf-utils.c  bpf.c  build-loader.sh  build.rs  dbus.rs  default.nix  dfa.rs  dns.rs  lib.rs  macros.rs  main.rs  netlink.rs
rebpf-gui/: Cargo.toml  default.nix  main.rs
rebpf-gui/dbus/: Cargo.toml  dbus.rs  service.rs  settings.rs
rebpf-gui/gui/: Cargo.toml  gui.rs  utils.rs
rebpf-gui/icons/: Cargo.toml  icons.rs
rebpf-gui/message/: Cargo.toml  macros.rs  message.rs
rebpf-gui/tray/: Cargo.toml  tray.rs
rebpf-gui/widgets/: Cargo.toml  container_hide.rs  container_hook.rs  labeled_frame.rs  modal.rs  widgets.rs
scripts/: fake-nixpkgs.sh  run-tests.sh  update.sh  vm-tests.nix
