[package]
name = "rebpf"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rebpf"
path = "main.rs"

[build-dependencies]
cc = "1"

[dependencies]
env_logger.workspace = true
log.workspace = true
argh.workspace = true
libc.workspace = true

tokio = { version = "1", default-features = false, features = [ "rt", "sync", "macros" ] }
eyre = "0"
netlink-bindings = { version = "0.3", features = [ "rt-link", "rt-addr", "rt-route", "rt-neigh" ] }
netlink-socket2 = { version = "0.3", features = [ ] }
scopeguard = "1"
zbus = { version = "5", default-features = false, features = [ "tokio", "async-io" ] }
zbus_polkit = "5"
serde = { version = "1", features = [ "rc" ] }
serde_json = "1"
