[package]
name = "rebpf"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rebpf"
path = "main.rs"

[lib]
path = "lib.rs"

[build-dependencies]
cc = "1"

[features]
bpf-trace = []
bpf-trace-time = []

[dependencies]
env_logger.workspace = true
log.workspace = true
argh.workspace = true
libc.workspace = true

tokio = { version = "1", default-features = false, features = [ "rt", "sync", "signal", "macros" ] }
eyre = "0"
netlink-bindings = { version = "0.3", features = [ "rt-link", "rt-addr", "rt-route", "rt-rule", "rt-neigh", "nftables" ] }
netlink-socket2 = { version = "0.3", features = [ ] }
scopeguard = "1"
zbus = { version = "5", default-features = false, features = [ "tokio", "async-io" ] }
zbus_polkit = "5"
serde = { version = "1", features = [ "rc" ] }
serde_json = "1"
rand = "0"
hickory-proto = { version = "0", default-features = false }
ipnet = { version = "2", default-features = false }
regex-automata = { version = "0.4.14", default-features = false, features = [ "dfa-build", "perf", "syntax", "unicode" ] }
