[package]
name = "gui"
edition.workspace = true

[lib]
path = "gui.rs"

[dependencies]
iced.workspace = true
iced_core.workspace = true
iced_widget.workspace = true
iced_aw.workspace = true
zbus.workspace = true
tokio.workspace = true
log.workspace = true
libc.workspace = true
rust-fuzzy-search.workspace = true

message.workspace = true
widgets.workspace = true
icons.workspace = true
